syntax = "proto3";

package ip;

option go_package = "github.com/magomedcoder/ipmanager/api/pb";

service IpService {
  rpc GetIps(GetIpsRequest) returns (GetIpsResponse);

  rpc GetIpById(GetIpRequest) returns (GetIpResponse);

  rpc EditIpCustomer(EditIpCustomerRequest) returns (EditIpCustomerResponse);

  rpc EditIpService(EditIpServiceRequest) returns (EditIpServiceResponse);

  rpc EditIpDescription(EditIpDescriptionRequest) returns (EditIpDescriptionResponse);
}

message GetIpsRequest {
  int64 subnet_id = 1;
}

message GetIpsResponse {
  int64 total = 1;
  repeated IpItem items = 2;
}

message IpItem {
  int64 id = 1;
  string ip = 2;
  bool busy = 3;
  int64 customer_id = 4;
  string customer_name = 5;
  int64 service_id = 6;
  string service_name = 7;
  string description = 8;
}

message GetIpRequest {
  int64 id = 1;
}

message GetIpResponse {
  int64 id = 1;
  string ip = 2;
  bool busy = 3;
  int64 customer_id = 4;
  string customer_name = 5;
  int64 service_id = 6;
  string service_name = 7;
  string description = 8;
}

message EditIpCustomerRequest {
  int64 id = 1;
  int64 customer_id = 2;
}

message EditIpCustomerResponse {
  bool success = 1;
}

message EditIpServiceRequest {
  int64 id = 1;
  int64 service_id = 2;
}

message EditIpServiceResponse {
  bool success = 1;
}

message EditIpDescriptionRequest {
  int64 id = 1;
  string description = 2;
}

message EditIpDescriptionResponse {
  bool success = 1;
}
